--- a/assets/fonts/icons.css
+++ b/assets/fonts/icons.css
@@ -46,12 +46,11 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-left-outline:before {
+    content: "\e900";
+}
 .icon-plus-1:before {
     content: "\e902";
-}
-.icon-list:before {
-    content: "\e900";
-    color: #4d4d4d;
 }
 .icon-file-lines:before {
     content: "\e901";
