--- a/assets/fonts/icons.css
+++ b/assets/fonts/icons.css
@@ -46,6 +46,12 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-sun-outline:before {
+    content: "\e909";
+}
+.icon-moon:before {
+    content: "\e90a";
+}
 .icon-arrow-left-outline:before {
     content: "\e900";
 }
@@ -63,11 +69,9 @@
 }
 .icon-store-outline:before {
     content: "\e905";
-    color: #4d4d4d;
 }
 .icon-chevron-down-outline:before {
     content: "\e906";
-    color: #4d4d4d;
 }
 .icon-user-outline:before {
     content: "\e907";
